# WeatherCast

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt  UI.cpp  UI.h  config.cpp  config.h  weather.cpp  weather.h
